load("@yacl//bazel:yacl.bzl", "AES_COPT_FLAGS")
load("@psi//bazel:psi.bzl", "psi_cc_binary", "psi_cc_library", "psi_cc_test")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

psi_cc_library(
    name = "vole_psi",
    srcs = ["vole_psi.cc"],
    hdrs = ["vole_psi.h"],
    deps = [
        "@psi//psi/rr22:rr22_psi",
        "@yacl//yacl/crypto/rand",
    ],
)

psi_cc_test(
    name = "vole_psi_test",
    srcs = ["vole_psi_test.cc"],
    deps = [
        ":vole_psi",
    ],
)





pybind_extension(
    name = "libvolepsi",
    srcs = ["libvolepsi.cc"],
    linkopts = select({
        "@platforms//os:windows": ["/FORCE:UNRESOLVED"],
        "//conditions:default": [],
    }),
    deps = [
        ":vole_psi",
    ],
)

py_library(
    name = "volepsi_lib",
    srcs = ["__init__.py"],  # 添加一个空的__init__.py文件
    data = [":libvolepsi.so"],  # 使用.so扩展名
    imports = ["."],
)

py_test(
    name = "vole_test",
    srcs = ["vole_test.py"],
    deps = [":volepsi_lib"],
)